--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,13 +1,10 @@
+@use "./_relative-value.scss" as relative-value;
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  font-size: 1vw;
 }
 
 html,
@@ -17,6 +14,13 @@ body {
 }
 
 body {
+  font-size: relative-value.narrow(12);
+  @media (min-width: #{relative-value.$breakpoint}) {
+    font-size: relative-value.wide(15);
+  }
+  // min-height: 200vh;
+  // position: relative;
+  height: 100vh;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
