--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,7 +1,36 @@
 @use "./_relative-value.scss" as relative-value;
 :root {
+  --ease-in-quad: cubic-bezier(0.55, 0.085, 0.68, 0.53);
+  --ease-in-cubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  --ease-in-quart: cubic-bezier(0.895, 0.03, 0.685, 0.22);
+  --ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+  --ease-in-expo: cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  --ease-in-circ: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+
+  --ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  --ease-out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
+  --ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
+  --ease-out-quint: cubic-bezier(0.23, 1, 0.32, 1);
+  --ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
+  --ease-out-circ: cubic-bezier(0.075, 0.82, 0.165, 1);
+
+  --ease-in-out-quad: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  --ease-in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1);
+  --ease-in-out-quart: cubic-bezier(0.77, 0, 0.175, 1);
+  --ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
+  --ease-in-out-expo: cubic-bezier(1, 0, 0, 1);
+  --ease-in-out-circ: cubic-bezier(0.785, 0.135, 0.15, 0.86);
+
+  --ease-out-custom: cubic-bezier(0.3, 0.65, 0.4, 1.03);
+  --ease-out-custom-ii: cubic-bezier(0.05, 0.81, 0.54, 0.95);
+
+  --timing-function: var(--ease-in-out-circ);
+  // --timing-function: var(--ease-in-out-cubic);
+
+  --font-app: system-ui, sans-serif;
   --background: #ffffff;
-  --foreground: #171717;
+  --background-200: #f2f1ed;
+  --foreground: #26213d;
 }
 html {
   font-size: 1vw;
@@ -14,6 +43,7 @@ body {
 }
 
 body {
+  font-family: var(--font-app), system-ui, sans-serif;
   font-size: relative-value.narrow(12);
   @media (min-width: #{relative-value.$breakpoint}) {
     font-size: relative-value.wide(15);
@@ -23,7 +53,7 @@ body {
   height: 100vh;
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  // font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
