--- a/src/app/(game)/game/page.module.css
+++ b/src/app/(game)/game/page.module.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  padding: 44px;
+  padding: 4px 44px;
   min-height: 0px;
   overflow: auto;
   justify-content: space-between;
